0.3
Added mysql table truncator task.
Updated segment xml processing code to handle timestamps.

0.2
Added Main-Class feature to the jar manifest simplifying program launch.
Added a shell launch script to simplify running on unix/linux.
Added a readme with basic installation instructions.
Added xml date parsing support.
Fixed database dump code to read the "current" tables.
Added a task for reading changes from a database.
Added a task for writing changes to a database.
Added a task for truncating database tables.
Improved mysql import performance by disabling indexes and locking tables.

0.1
Initial version.